--- a/index.html
+++ b/index.html
@@ -2,59 +2,77 @@
 <html lang="en-US">
 
 	<head>
-		<title>Tristan B. - Software Engineering Student</title>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="style.css">
+		<title>Tristan BONY - Software Engineering Student</title>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="style.css" />
+		<link rel="icon" href="assets/favicon.ico" />
 	</head>
 
 	<body>
 		<header>
-			<h1>Tristan B.</h1>
+			<h1>Tristan BONY</h1>
 			<nav>
 				<ul>
-					<li>Who am I ?</li>
-					<li>My achievements</li>
-					<li>My photographs</li>
+					<li><a href="#welcome">Who am I ?</a></li>
+					<li><a href="#project1">My achievements</a></li>
 				</ul>
 			</nav>
 		</header>
 
-		<section>
-			<p>Welcome</p>
+		<section id="welcome">
+			<p class="light">Welcome</p>
 			<hr />
 			<h2>Who am I ?</h2>
 			<article>
-				<p>Presentation</p>
+				<p>Text presentation</p>
 			</article>
 			<aside>
-				<img alt="image qui" />
+				<img alt="photo of me" />
+				<!--Make a classy card with essential information-->
 			</aside>
 		</section>
 
-		<section>
-			<p>My achievements</p>
+		<section class="achievements" id="project1">
+			<p class="light">My achievements</p>
 			<hr />
-			<h2>My logos</h2>
-			<img alt="logo1" />
-			<img alt="logo2" />
-			<!--En rajouter pour chaque logo-->
+			<img alt="project 1" src="" />
+			<h2>Project 1</h2>
+			<article>Quick presentation</article>
+			<!--Button to project explanation-->
 		</section>
 
-		<section>
-			<section>
-				<p>Album N°1</p>
-				<hr />
-				<img alt="album1" />
-				<h3>Place</h3>
-				<article>Presentation</article>
-			</section>
-			<!--Rajouter d'autres <section> pour autres albums-->
+		<section class="achievements" id="project2">
+			<p class="light">My achievements</p>
+			<hr />
+			<img alt="project 2" src="" />
+			<h2>Project 2</h3>
+			<article>Quick presentation</article>
+			<!--Button to project explanation-->
+		</section>
+
+		<section class="achievements" id="project3">
+			<p class="light">My achievements</p>
+			<hr />
+			<img alt="project 3" src="" />
+			<h2>Project 3</h2>
+			<article>Quick presentation</article>
+			<!--Button to project explanation-->
 		</section>
 
 		<footer>
-			<p>&copy;Tristan B. - 2021</p>
+			<p>&copy; <span id="year"></span> Tristan BONY</p>
+			<!--Links to move when card ready-->
+			<p><a href="https://www.linkedin.com/in/tristanb0/">LinkedIn</a></p>
 			<p><a href="https://www.twitter.com/TristanB0">Twitter</a></p>
+			<p><a href="https://www.github.com/TristanB0">GitHub</a></p>
 		</footer>
+
+		<script>
+			const d = new Date();
+			let year = d.getFullYear();
+			document.getElementById("year").innerHTML = year;
+		</script>
 
 	</body>
 </html>
