Layout + beginning of the card

--- a/index.html
+++ b/index.html
@@ -5,60 +5,136 @@
 		<title>Tristan BONY - Software Engineering Student</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="style.css" />
-		<link rel="icon" href="assets/favicon.ico" />
+		<link rel="stylesheet" href="./style.css" />
+		<link rel="icon" href="./assets/images/favicon.ico" />
 	</head>
 
 	<body>
 		<header>
+			<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan BONY" class="logo" />
 			<h1>Tristan BONY</h1>
 			<nav>
-				<ul>
-					<li><a href="#welcome">Who am I ?</a></li>
-					<li><a href="#project1">My achievements</a></li>
-				</ul>
+				<a href="#welcome" class="menu">Who am I?</a>
+				<a href="#project1" class="menu">My achievements</a>
 			</nav>
 		</header>
 
 		<section id="welcome">
 			<p class="light">Welcome</p>
 			<hr />
-			<h2>Who am I ?</h2>
-			<article>
-				<p>Text presentation</p>
-			</article>
-			<aside>
-				<img alt="photo of me" />
-				<!--Make a classy card with essential information-->
-			</aside>
+			<div class="content">
+				<article>
+					<h2>Who am I?</h2>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p>
+				</article>
+				<aside>
+					<div class="card">
+						<div class="card-header" style="
+							background-color: #0078d4;
+							height: 9rem;
+							border-top-left-radius: 2px;
+							border-top-right-radius: 2px;">
+						</div>
+						<div class="card-image" style="margin-top: -4.5rem;">
+							<img class="img-fluid" src="./assets/images/Logo_TristanB_v3.jpg" alt="Card image">
+						</div>
+						<div class="card-body">
+								<p class="card-name">Tristan BONY</h5>
+								<p class="card-work">Engineering student @ ISIMA</p>
+								<a href="" class="card-cv">Download my CV</a>
+							<ul class="card-ul">
+								<li class="card-li">
+									<span>Clermont-Ferrand, FRANCE</span>
+								</li>
+								<li class="card-li">
+									<span>+336 42 08 91 17</span>
+								</li>
+								<li class="card-li">
+									<span>tristan.bony@proton.me</span>
+								</li>
+							</ul>
+						</div>
+						<div class="card-footer">
+							<a href="" class="card-link">
+								<img />
+							</a>
+							<a href="" class="card-link">
+								<img />
+							</a>
+							<a href="" class="card-link">
+								<img />
+							</a>
+							<a href="" class="card-link">
+								<img />
+							</a>
+						</div>
+					</div>
+				</aside>
+			</div>
 		</section>
 
-		<section class="achievements" id="project1">
-			<p class="light">My achievements</p>
-			<hr />
-			<img alt="project 1" src="" />
-			<h2>Project 1</h2>
-			<article>Quick presentation</article>
-			<!--Button to project explanation-->
-		</section>
+		<div class="container">
+			<section class="achievements" id="project1">
+				<p class="light">My achievements</p>
+				<hr />
+				<img alt="project 1" src="" />
+				<article>
+					<h2>Project 1</h2>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
+				<a href="" class="button">Read more</a>
+			</section>
 
-		<section class="achievements" id="project2">
-			<p class="light">My achievements</p>
-			<hr />
-			<img alt="project 2" src="" />
-			<h2>Project 2</h3>
-			<article>Quick presentation</article>
-			<!--Button to project explanation-->
-		</section>
+			<section class="achievements" id="project2">
+				<p class="light">My achievements</p>
+				<hr />
+				<img alt="project 2" src="" />
+				<article>
+					<h2>Project 2</h3>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
+				<a href="" class="button">Read more</a>
+			</section>
 
-		<section class="achievements" id="project3">
-			<p class="light">My achievements</p>
-			<hr />
-			<img alt="project 3" src="" />
-			<h2>Project 3</h2>
-			<article>Quick presentation</article>
-			<!--Button to project explanation-->
-		</section>
+			<section class="achievements" id="project3">
+				<p class="light">My achievements</p>
+				<hr />
+				<img alt="project 3" src="" />
+				<article>
+					<h2>Project 3</h2>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
+				<a href="" class="button">Read more</a>
+			</section>
+
+			<section class="achievements" id="project4">
+				<p class="light">My achievements</p>
+				<hr />
+				<img alt="project 4" src="" />
+				<article>
+					<h2>Project 4</h2>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
+				<a href="" class="button">Read more</a>
+			</section>
+
+			<section class="achievements" id="project5">
+				<p class="light">My achievements</p>
+				<hr />
+				<img alt="project 5" src="" />
+				<article>
+					<h2>Project 5</h2>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
+				<a href="" class="button">Read more</a>
+			</section>
+
+			<section class="achievements" id="project6">
+				<p class="light">My achievements</p>
+				<hr />
+				<img alt="project 6" src="" />
+				<article>
+					<h2>Project 6</h3>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p>
+				</article>
+				<a href="" class="button">Read more</a>
+			</section>
+		</div>
 
 		<footer>
 			<p>&copy; <span id="year"></span> Tristan BONY</p>
