Removed navbar and completed card

--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
 		<link rel="icon" href="./assets/images/favicon.ico" />
 	</head>
 
-	<body>
+	<body><!---->
 		<header>
 			<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan BONY" class="logo" />
 			<h1>Tristan BONY</h1>
-			<nav>
-				<a href="#welcome" class="menu">Who am I?</a>
-				<a href="#project1" class="menu">My achievements</a>
-			</nav>
 		</header>
 
 		<section id="welcome">
@@ -28,46 +24,35 @@
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p>
 				</article>
 				<aside>
-					<div class="card">
-						<div class="card-header" style="
-							background-color: #0078d4;
-							height: 9rem;
-							border-top-left-radius: 2px;
-							border-top-right-radius: 2px;">
-						</div>
-						<div class="card-image" style="margin-top: -4.5rem;">
-							<img class="img-fluid" src="./assets/images/Logo_TristanB_v3.jpg" alt="Card image">
-						</div>
-						<div class="card-body">
-								<p class="card-name">Tristan BONY</h5>
-								<p class="card-work">Engineering student @ ISIMA</p>
-								<a href="" class="card-cv">Download my CV</a>
-							<ul class="card-ul">
-								<li class="card-li">
-									<span>Clermont-Ferrand, FRANCE</span>
-								</li>
-								<li class="card-li">
-									<span>+336 42 08 91 17</span>
-								</li>
-								<li class="card-li">
-									<span>tristan.bony@proton.me</span>
-								</li>
-							</ul>
-						</div>
-						<div class="card-footer">
-							<a href="" class="card-link">
-								<img />
-							</a>
-							<a href="" class="card-link">
-								<img />
-							</a>
-							<a href="" class="card-link">
-								<img />
-							</a>
-							<a href="" class="card-link">
-								<img />
-							</a>
-						</div>
+					<div class="card-header">
+						<img class="card-image" src="./assets/images/profile_pic.jpg" alt="Picture of me" />
+					</div>
+					<div class="card-body">
+						<h3 class="card-name">Tristan BONY</h3>
+						<p class="card-work">Engineering student @ ISIMA</p>
+						<ul class="card-ul">
+							<li class="card-li">
+								<span>Clermont-Ferrand, FRANCE</span>
+							</li>
+							<li class="card-li">
+								<a href="tel:+33642089117">(+33)6 42 08 91 17</a>
+							</li>
+							<li class="card-li">
+								<a href="mailto:tristan.bony@proton.me">tristan.bony@proton.me</a>
+							</li>
+						</ul>
+						<p><a href="./assets/pdf/CV.pdf" class="card-cv">Download my CV</a></p>
+					</div>
+					<div class="card-footer">
+						<a href="https://www.linkedin.com/in/tristanb0/" class="card-link">
+							<img src="./assets/images/LI-In-Bug.png" alt="LinkedIn" />
+						</a>
+						<a href="https://www.twitter.com/TristanB0" class="card-link">
+							<img src="./assets/images/2021-Twitter-logo-blue.png" alt="Twitter" />
+						</a>
+						<a href="https://www.github.com/TristanB0" class="card-link">
+							<img src="./assets/images/GitHub-Mark-32px.png" alt="GitHub" />
+						</a>
 					</div>
 				</aside>
 			</div>
@@ -139,9 +124,6 @@
 		<footer>
 			<p>&copy; <span id="year"></span> Tristan BONY</p>
 			<!--Links to move when card ready-->
-			<p><a href="https://www.linkedin.com/in/tristanb0/">LinkedIn</a></p>
-			<p><a href="https://www.twitter.com/TristanB0">Twitter</a></p>
-			<p><a href="https://www.github.com/TristanB0">GitHub</a></p>
 		</footer>
 
 		<script>
