--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="./assets/images/favicon.ico" />
 	</head>
 
-	<body><!---->
+	<body>
 		<header>
 			<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan BONY" class="logo" />
 			<h1>Tristan BONY</h1>
@@ -21,7 +21,18 @@
 			<div class="content">
 				<article>
 					<h2>Who am I?</h2>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p>
+					<p>
+						Immersed in the world of computer science from a very young age, I quickly became curious to understand the technologies that are part of our daily lives by tinkering and searching for information by myself.
+					</p>
+					<p>
+						That's why I decided to join ISIMA, a French engineering school specialized in computer science after my CPGE at the Edouard Branly high school in Lyon in order to acquire more information and to make it my job. These trainings taught me rigor with the help of scientific knowledge like mathematics, industrial sciences, physics and, of course, computer science...
+					</p>
+					<p>
+						My engineering studies have allowed me to acquire skills in C, SQL and Scheme which completes my knowledge acquired as a self-taught person, such as HTML and CSS as well as PHP. Finally, I master GNU/Linux and Windows operating systems.
+					</p>
+					<p>
+						Besides my passion for technology, I also enjoy mountain biking, skiing and billiards (Blackball/Snooker). In my free time, I also like to watch movies and series... and cat pictures.
+					</p>
 				</article>
 				<aside>
 					<div class="card-header">
@@ -41,16 +52,16 @@
 								<a href="mailto:tristan.bony@proton.me">tristan.bony@proton.me</a>
 							</li>
 						</ul>
-						<p><a href="./assets/pdf/CV.pdf" class="card-cv">Download my CV</a></p>
+						<p><a href="./assets/pdf/CV.pdf" target="_blank" class="card-cv">Download my CV</a></p>
 					</div>
 					<div class="card-footer">
-						<a href="https://www.linkedin.com/in/tristanb0/" class="card-link">
+						<a href="https://www.linkedin.com/in/tristanb0/" target="_blank" class="card-link">
 							<img src="./assets/images/LI-In-Bug.png" alt="LinkedIn" />
 						</a>
-						<a href="https://www.twitter.com/TristanB0" class="card-link">
+						<a href="https://www.twitter.com/TristanB0" target="_blank" class="card-link">
 							<img src="./assets/images/2021-Twitter-logo-blue.png" alt="Twitter" />
 						</a>
-						<a href="https://www.github.com/TristanB0" class="card-link">
+						<a href="https://www.github.com/TristanB0" target="_blank" class="card-link">
 							<img src="./assets/images/GitHub-Mark-32px.png" alt="GitHub" />
 						</a>
 					</div>
