--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					</div>
 					<div class="card-body">
 						<h3 class="card-name">Tristan BONY</h3>
-						<p class="card-work">Engineering student @ ISIMA</p>
+						<p class="card-work">Engineering student @ ISIMA, Clermont-Ferrand</p>
 						<ul class="card-ul">
 							<li class="card-li">
 								<span>Clermont-Ferrand, FRANCE</span>
@@ -134,7 +134,6 @@
 
 		<footer>
 			<p>&copy; <span id="year"></span> Tristan BONY</p>
-			<!--Links to move when card ready-->
 		</footer>
 
 		<script>
