Move script in separate file

--- a/index.html
+++ b/index.html
@@ -136,11 +136,6 @@
 			<p>&copy; <span id="year"></span> Tristan BONY</p>
 		</footer>
 
-		<script>
-			const d = new Date();
-			let year = d.getFullYear();
-			document.getElementById("year").innerHTML = year;
-		</script>
-
+		<script src="./script.js"></script>
 	</body>
 </html>
