Laying the groundwork for project pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</header>
 
 		<section id="welcome">
-			<p class="light">Welcome</p>
+			<h4 class="light">Welcome</h4>
 			<hr />
 			<div class="content">
 				<article>
@@ -71,64 +71,64 @@
 
 		<div class="container">
 			<section class="achievements" id="project1">
-				<p class="light">My achievements</p>
+				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="project 1" src="" />
+				<img alt="my website v4" src="" />
 				<article>
-					<h2>Project 1</h2>
+					<h2>My website v4</h2>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
-				<a href="" class="button">Read more</a>
+				<a href="./my_website_v4.html" class="button">Read more</a>
 			</section>
 
 			<section class="achievements" id="project2">
-				<p class="light">My achievements</p>
+				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="project 2" src="" />
+				<img alt="my website v5" src="" />
 				<article>
-					<h2>Project 2</h2>
+					<h2>My website v5</h2>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
-				<a href="" class="button">Read more</a>
+				<a href="./my_website_v5.html" class="button">Read more</a>
 			</section>
 
 			<section class="achievements" id="project3">
-				<p class="light">My achievements</p>
+				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="project 3" src="" />
+				<img alt="Q-learning" src="" />
 				<article>
-					<h2>Project 3</h2>
+					<h2>Q-learning (School)</h2>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
-				<a href="" class="button">Read more</a>
+				<a href="./q_learning.html" class="button">Read more</a>
 			</section>
 
 			<section class="achievements" id="project4">
-				<p class="light">My achievements</p>
+				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="project 4" src="" />
+				<img alt="Discord bot" src="" />
 				<article>
-					<h2>Project 4</h2>
+					<h2>Anniminder - Discord bot</h2>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
-				<a href="" class="button">Read more</a>
+				<a href="./anniminder.html" class="button">Read more</a>
 			</section>
 
 			<section class="achievements" id="project5">
-				<p class="light">My achievements</p>
+				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="project 5" src="" />
+				<img alt="Raspberry Pi" src="" />
 				<article>
-					<h2>Project 5</h2>
+					<h2>Raspberry Pi</h2>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
-				<a href="" class="button">Read more</a>
+				<a href="./raspberry_pi.html" class="button">Read more</a>
 			</section>
 
 			<section class="achievements" id="project6">
-				<p class="light">My achievements</p>
+				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="project 6" src="" />
+				<img alt="logos" src="" />
 				<article>
-					<h2>Project 6</h2>
+					<h2>Logos</h2>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p>
 				</article>
-				<a href="" class="button">Read more</a>
+				<a href="./logos.html" class="button">Read more</a>
 			</section>
 		</div>
 
