--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<section class="achievements" id="project1">
 				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="my website v4" src="" />
+				<img alt="my website v4" src="./assets/images/my_website_v4/Screen_TristanB_en.png" />
 				<article>
 					<h2>My website v4</h2>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
@@ -83,7 +83,7 @@
 			<section class="achievements" id="project2">
 				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="my website v5" src="" />
+				<img alt="my website v5" src="./assets/images/my_website_v5/Screen_TristanB_v5.png" />
 				<article>
 					<h2>My website v5</h2>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
@@ -93,9 +93,9 @@
 			<section class="achievements" id="project3">
 				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="Q-learning" src="" />
+				<img alt="Q-learning" src="./assets/images/q_learning/player_mode.png" />
 				<article>
-					<h2>Q-learning (School)</h2>
+					<h2>Q-learning (School project)</h2>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
 				<a href="./q_learning.html" class="button">Read more</a>
 			</section>
@@ -113,7 +113,7 @@
 			<section class="achievements" id="project5">
 				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="Raspberry Pi" src="" />
+				<img alt="Raspberry Pi" src="./assets/images/raspberry_pi/raspberry_pi_logo.png" />
 				<article>
 					<h2>Raspberry Pi</h2>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
