--- a/anniminder.html
+++ b/anniminder.html
@@ -16,6 +16,7 @@
 		</header>
 
         <section id="project">
+			<h2>Anniminder (Discord bot)</h2>
             <!---->
         </section>
         
