--- a/q_learning.html
+++ b/q_learning.html
@@ -16,6 +16,7 @@
 		</header>
 
         <section id="project">
+			<h2>Q-learning (School project)</h2>
             <!---->
         </section>
         
