--- a/raspberry_pi.html
+++ b/raspberry_pi.html
@@ -16,6 +16,7 @@
 		</header>
 
         <section id="project">
+			<h2>Raspberry Pi projects</h2>
             <!---->
         </section>
         
