Completed my_website_v4.html

--- a/anniminder.html
+++ b/anniminder.html
@@ -11,8 +11,10 @@
 
 	<body>
 		<header>
-			<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan BONY" class="logo" />
-			<h1>Tristan BONY</h1>
+			<a href="./index.html">
+				<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan BONY" class="logo" />
+				<h1>Tristan BONY</h1>
+			</a>
 		</header>
 
         <section id="project">
