--- a/my_website_v4.html
+++ b/my_website_v4.html
@@ -11,13 +11,25 @@
 
 	<body>
 		<header>
-			<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan BONY" class="logo" />
-			<h1>Tristan BONY</h1>
+			<a href="./index.html">
+				<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan BONY" class="logo" />
+				<h1>Tristan BONY</h1>
+			</a>
 		</header>
 
         <section id="project">
 			<h2>My website v4</h2>
-            <!---->
+			<hr />
+            <p>This is the fourth version of my website I designed entirely. There was a presentation of myself, logos I made and photographs I took throughout my trips. There was also a link to Electrogen', a tech news website where I was an editor.</p>
+			<figure>
+				<img src="./assets/images/my_website_v4/Screen_TristanB_en.png" alt="My website v4" />
+				<figcaption>Glimpse of what it looked like.</figcaption>
+			</figure>
+			<p>It was also the first time I tried to make it responsive, so that the UI changed for tablet users and mobile users.</p>
+			<figure>
+				<img src="./assets/images/my_website_v4/Screen_responsive.png" alt="My website v4 responsive" />
+				<figcaption>How it looked like for mobile users.</figcaption>
+			</figure>
         </section>
     
         <footer>
