Quick presentation of projects

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 					<p>
 						Besides my passion for technology, I also enjoy mountain biking, skiing and billiards (Blackball/Snooker). In my free time, I also like to watch movies and series... and cat pictures.
 					</p>
+					<p>
+						Finally, I studied three languages in addition of French (native language): English (level B2-C1), Spanish (limited professional capacities) and Mandarin (basic knowledge).
+					</p>
 				</article>
 				<aside>
 					<div class="card-header">
@@ -52,16 +55,16 @@
 								<a href="mailto:tristan.bony@proton.me">tristan.bony@proton.me</a>
 							</li>
 						</ul>
-						<p><a href="./assets/pdf/CV.pdf" target="_blank" class="card-cv">Download my CV</a></p>
+						<p><a href="./assets/pdf/CV.pdf" target="_blank" class="card-cv">Download my CV (French)</a></p>
 					</div>
 					<div class="card-footer">
-						<a href="https://www.linkedin.com/in/tristanb0/" target="_blank" class="card-link">
+						<a href="https://www.linkedin.com/in/tristanb0/" target="_blank" title="Visit my LinkedIn" class="card-link">
 							<img src="./assets/images/LI-In-Bug.png" alt="LinkedIn" />
 						</a>
-						<a href="https://www.twitter.com/TristanB0" target="_blank" class="card-link">
+						<a href="https://www.twitter.com/TristanB0" target="_blank" title="Come see my tweets" class="card-link">
 							<img src="./assets/images/2021-Twitter-logo-blue.png" alt="Twitter" />
 						</a>
-						<a href="https://www.github.com/TristanB0" target="_blank" class="card-link">
+						<a href="https://www.github.com/TristanB0" target="_blank" title="Link to my projects" class="card-link">
 							<img src="./assets/images/GitHub-Mark-32px.png" alt="GitHub" />
 						</a>
 					</div>
@@ -76,7 +79,8 @@
 				<img alt="my website v4" src="./assets/images/my_website_v4/Screen_TristanB_en.png" />
 				<article>
 					<h2>My website v4</h2>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
+					<p>Fourth version of my website in which I introduce myself and some of my personal projects.</p>
+				</article>
 				<a href="./my_website_v4.html" class="button">Read more</a>
 			</section>
 
@@ -86,7 +90,8 @@
 				<img alt="my website v5" src="./assets/images/my_website_v5/Screen_TristanB_v5.png" />
 				<article>
 					<h2>My website v5</h2>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
+					<p>The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years.</p>
+				</article>
 				<a href="./my_website_v5.html" class="button">Read more</a>
 			</section>
 
@@ -96,7 +101,8 @@
 				<img alt="Q-learning" src="./assets/images/q_learning/player_mode.png" />
 				<article>
 					<h2>Q-learning (School project)</h2>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
+					<p>Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path.</p>
+				</article>
 				<a href="./q_learning.html" class="button">Read more</a>
 			</section>
 
@@ -106,7 +112,8 @@
 				<img alt="Discord bot" src="" />
 				<article>
 					<h2>Anniminder - Discord bot</h2>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
+					<p>Discord bot which reminds people birthdays with a random sentence in the servers he set his birthday or can tell the birthday of someone else if asked by another user.</p>
+				</article>
 				<a href="./anniminder.html" class="button">Read more</a>
 			</section>
 
@@ -116,7 +123,8 @@
 				<img alt="Raspberry Pi" src="./assets/images/raspberry_pi/raspberry_pi_logo.png" />
 				<article>
 					<h2>Raspberry Pi</h2>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p></article>
+					<p>Multiples projects realized with a Raspberry Pi.</p>
+				</article>
 				<a href="./raspberry_pi.html" class="button">Read more</a>
 			</section>
 
@@ -126,7 +134,7 @@
 				<img alt="logos" src="" />
 				<article>
 					<h2>Logos</h2>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores repellendus, dolor possimus veniam officia sapiente ea, esse ducimus quod voluptatibus autem quam voluptas accusantium quae excepturi amet earum voluptatem fuga.</p>
+					<p>Some logos I created for fun.</p>
 				</article>
 				<a href="./logos.html" class="button">Read more</a>
 			</section>
