--- a/my_website_v5.html
+++ b/my_website_v5.html
@@ -19,6 +19,8 @@
 
         <section id="project">
 			<h2>My website v5</h2>
+			<hr />
+			<p><a href="https://github.com/TristanB0/my_website_v5">Link to the GitHub of the project.</a></p>
             <!---->
         </section>
         
