--- a/my_website_v4.html
+++ b/my_website_v4.html
@@ -20,7 +20,8 @@
         <section id="project">
 			<h2>My website v4</h2>
 			<hr />
-            <p>This is the fourth version of my website I designed entirely. There was a presentation of myself, logos I made and photographs I took throughout my trips. There was also a link to Electrogen', a tech news website where I was an editor.</p>
+			<p><a href="https://github.com/TristanB0/mywebsite_v4">Link to the GitHub of the project.</a></p>
+            <p>This is the fourth version of my website I designed entirely. There was an introduction of myself, logos I made and photographs I took throughout my trips. There was also a link to Electrogen', a tech news website where I was an editor.</p>
 			<figure>
 				<img src="./assets/images/my_website_v4/Screen_TristanB_en.png" alt="My website v4" />
 				<figcaption>Glimpse of what it looked like.</figcaption>
