--- a/q_learning.html
+++ b/q_learning.html
@@ -19,8 +19,9 @@
 
         <section id="project">
 			<h2>Q-learning (School project)</h2>
+			<hr />
             <p>
-				This is the project we had to do at the end of our first year of engineering school in teams of 3. The goal was to build a game using the C language and SDL2 and then build a Q-learning algorithm (here : double-Q-learning) to learn solving the game.
+				This is the project we had to do at the end of our first year of engineering school in teams of 3. The goal was to build a game using the C language and SDL2 and then build a Q-learning algorithm (here: double-Q-learning) to learn solving the game.
 			</p>
 			<figure>
 				<img src="./assets/images/q_learning/ia_learning.gif" alt="IA learning" />
@@ -43,7 +44,7 @@
 			<p>We also added a gamemode where the player could solve the maze by himself and we integrated the whole through a menu.</p>
 			<figure>
 				<img src="./assets/images/q_learning/player_mode.png" alt="player mode" />
-				<figcaption>Images of the player mode with more recent graphics.</figcaption>
+				<figcaption>Images of the player mode with updated graphics.</figcaption>
 			</figure>
         </section>
         
