Temporary easter egg

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						My engineering studies have allowed me to acquire skills in C, SQL and Scheme which completes my knowledge acquired as a self-taught person, such as HTML and CSS as well as PHP. Finally, I master GNU/Linux and Windows operating systems.
 					</p>
 					<p>
-						Besides my passion for technology, I also enjoy mountain biking, skiing and billiards (Blackball/Snooker). In my free time, I also like to watch movies and series... and cat pictures.
+						Besides my passion for technology, I also enjoy mountain biking, skiing and billiards (Blackball/Snooker/9-ball). In my free time, I also like to watch movies and series... and cat pictures of course.
 					</p>
 					<p>
 						Finally, I studied three languages in addition of French (native language): English (level B2-C1), Spanish (limited professional capacities) and Mandarin (basic knowledge).
@@ -147,3 +147,11 @@
 		<script src="./script.js"></script>
 	</body>
 </html>
+
+<!--
+Le premier à me contacter aura sa prochaine pizza du mercredi soir offerte ! ;)
+Voilà, c'est cadeau
+En même temps c'est mérité
+Je n'étais pas sûr que quelqu'un soit motivé jusque-là
+BiZZous
+-->
