New project, projects in reverse order, graphics

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 	<head>
-		<title>Tristan BONY - Software Engineering Student</title>
+		<title>Tristan Bony - Software Engineering Student</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="./style.css" />
@@ -12,7 +12,7 @@
 	<body>
 		<header>
 			<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan BONY" class="logo" />
-			<h1>Tristan BONY</h1>
+			<h1>Tristan Bony</h1>
 		</header>
 
 		<section id="welcome">
@@ -28,13 +28,13 @@
 						That's why I decided to join ISIMA, a French engineering school specialized in computer science after my CPGE at the Edouard Branly high school in Lyon in order to acquire more information and to make it my job. These trainings taught me rigor with the help of scientific knowledge like mathematics, industrial sciences, physics and, of course, computer science...
 					</p>
 					<p>
-						My engineering studies have allowed me to acquire skills in C, SQL and Scheme which completes my knowledge acquired as a self-taught person, such as HTML and CSS as well as PHP. Finally, I master GNU/Linux and Windows operating systems.
+						My engineering studies have allowed me to acquire skills in C, C++, C#, Java and SQL which completes my knowledge acquired as a self-taught person, such as Python, HTML, CSS as well as PHP. Finally, I master GNU/Linux and Windows operating systems.
 					</p>
 					<p>
 						Besides my passion for technology, I also enjoy mountain biking, skiing and billiards (Blackball/Snooker/9-ball). In my free time, I also like to watch movies and series... and cat pictures of course.
 					</p>
 					<p>
-						Finally, I studied three languages in addition of French (native language): English (level B2-C1), Spanish (limited professional capacities) and Mandarin (basic knowledge).
+						Finally, I studied three languages in addition of French (native language): English (level B2-C1), Spanish (level B1) and Mandarin (basic knowledge).
 					</p>
 				</article>
 				<aside>
@@ -42,14 +42,14 @@
 						<img class="card-image" src="./assets/images/profile_pic.jpg" alt="Picture of me" />
 					</div>
 					<div class="card-body">
-						<h3 class="card-name">Tristan BONY</h3>
-						<p class="card-work">Engineering student @ ISIMA, Clermont-Ferrand</p>
+						<h3 class="card-name">Tristan Bony</h3>
+						<p class="card-work">Student in software engineering and computer systems @ ISIMA, Clermont-Ferrand</p>
 						<ul class="card-ul">
 							<li class="card-li">
 								<span>Clermont-Ferrand, FRANCE</span>
 							</li>
 							<li class="card-li">
-								<a href="tel:+33642089117">(+33)6 42 08 91 17</a>
+								<a href="tel:+33642089117">+33(0)6 42 08 91 17</a>
 							</li>
 							<li class="card-li">
 								<a href="mailto:tristan.bony@proton.me">tristan.bony@proton.me</a>
@@ -58,7 +58,7 @@
 						<p><a href="./assets/pdf/CV.pdf" target="_blank" class="card-cv">Download my CV (French)</a></p>
 					</div>
 					<div class="card-footer">
-						<a href="https://www.linkedin.com/in/tristanb0/" target="_blank" title="Visit my LinkedIn" class="card-link">
+						<a href="https://www.linkedin.com/in/tristanbony/" target="_blank" title="Visit my LinkedIn" class="card-link">
 							<img src="./assets/images/LI-In-Bug.png" alt="LinkedIn" />
 						</a>
 						<a href="https://www.twitter.com/TristanB0" target="_blank" title="Come see my tweets" class="card-link">
@@ -73,54 +73,32 @@
 		</section>
 
 		<div class="container">
-			<section class="achievements" id="project1">
+			<section class="achievements">
 				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="my website v4" src="./assets/images/my_website_v4/Screen_TristanB_en.png" />
+				<img alt="Langlsater Discord bot logo" src="./assets/images/langslater/langslater_logo.png" />
 				<article>
-					<h2>My website v4</h2>
-					<p>Fourth version of my website in which I introduce myself and some of my personal projects.</p>
+					<h2>Langslater (Discord bot)</h2>
+					<p>Discord bot which translates messages which are not in a list of languages selected by the users.</p>
 				</article>
-				<a href="./my_website_v4.html" class="button">Read more</a>
+				<a href="./langslater.html" class="button">Read more</a>
 			</section>
 
-			<section class="achievements" id="project2">
+			<section class="achievements">
 				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="my website v5" src="./assets/images/my_website_v5/Screen_TristanB_v5.png" />
+				<img alt="Anniminder Discord bot logo" src="./assets/images/anniminder/anniminder_logo.png" />
 				<article>
-					<h2>My website v5</h2>
-					<p>The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years.</p>
-				</article>
-				<a href="./my_website_v5.html" class="button">Read more</a>
-			</section>
-
-			<section class="achievements" id="project3">
-				<h4 class="light">My achievements</h4>
-				<hr />
-				<img alt="Q-learning" src="./assets/images/q_learning/player_mode.png" />
-				<article>
-					<h2>Q-learning (School project)</h2>
-					<p>Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path.</p>
-				</article>
-				<a href="./q_learning.html" class="button">Read more</a>
-			</section>
-
-			<section class="achievements" id="project4">
-				<h4 class="light">My achievements</h4>
-				<hr />
-				<img alt="Discord bot" src="" />
-				<article>
-					<h2>Anniminder - Discord bot</h2>
+					<h2>Anniminder (Discord bot)</h2>
 					<p>Discord bot which reminds people birthdays with a random sentence in the servers he set his birthday or can tell the birthday of someone else if asked by another user.</p>
 				</article>
 				<a href="./anniminder.html" class="button">Read more</a>
 			</section>
 
-			<section class="achievements" id="project5">
+			<section class="achievements">
 				<h4 class="light">My achievements</h4>
 				<hr />
-				<img alt="Raspberry Pi" src="./assets/images/raspberry_pi/raspberry_pi_logo.png" />
+				<img alt="Raspberry Pi's logo" src="./assets/images/raspberry_pi/raspberry_pi_logo.png" />
 				<article>
 					<h2>Raspberry Pi</h2>
 					<p>Multiples projects realized with a Raspberry Pi.</p>
@@ -128,7 +106,29 @@
 				<a href="./raspberry_pi.html" class="button">Read more</a>
 			</section>
 
-			<section class="achievements" id="project6">
+			<section class="achievements">
+				<h4 class="light">My achievements</h4>
+				<hr />
+				<img alt="Image of our Q-learning project" src="./assets/images/q_learning/player_mode.png" />
+				<article>
+					<h2>Q-learning (School project)</h2>
+					<p>Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path.</p>
+				</article>
+				<a href="./q_learning.html" class="button">Read more</a>
+			</section>
+
+			<section class="achievements">
+				<h4 class="light">My achievements</h4>
+				<hr />
+				<img alt="Photo of my website v5" src="./assets/images/my_website_v5/Screen_TristanB_v5.png" />
+				<article>
+					<h2>My website v5</h2>
+					<p>The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years.</p>
+				</article>
+				<a href="./my_website_v5.html" class="button">Read more</a>
+			</section>
+
+			<section class="achievements">
 				<h4 class="light">My achievements</h4>
 				<hr />
 				<img alt="logos" src="" />
@@ -138,10 +138,21 @@
 				</article>
 				<a href="./logos.html" class="button">Read more</a>
 			</section>
+
+			<section class="achievements">
+				<h4 class="light">My achievements</h4>
+				<hr />
+				<img alt="my website v4" src="./assets/images/my_website_v4/Screen_TristanB_en.png" />
+				<article>
+					<h2>My website v4</h2>
+					<p>Fourth version of my website in which I introduce myself and some of my personal projects.</p>
+				</article>
+				<a href="./my_website_v4.html" class="button">Read more</a>
+			</section>
 		</div>
 
 		<footer>
-			<p>&copy; <span id="year"></span> Tristan BONY</p>
+			<p>&copy; <span id="year"></span> Tristan Bony</p>
 		</footer>
 
 		<script src="./script.js"></script>
