Modified last name to fit with english format

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<body>
 		<header>
-			<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan BONY" class="logo" />
+			<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan Bony" class="logo" />
 			<h1>Tristan Bony</h1>
 		</header>
 
@@ -52,13 +52,13 @@
 								<a href="tel:+33642089117">+33(0)6 42 08 91 17</a>
 							</li>
 							<li class="card-li">
-								<a href="mailto:tristan.bony@proton.me">tristan.bony@proton.me</a>
+								<a href="mailto:tristan.Bony@proton.me">tristan.Bony@proton.me</a>
 							</li>
 						</ul>
 						<p><a href="./assets/pdf/CV.pdf" target="_blank" class="card-cv">Download my CV (French)</a></p>
 					</div>
 					<div class="card-footer">
-						<a href="https://www.linkedin.com/in/tristanbony/" target="_blank" title="Visit my LinkedIn" class="card-link">
+						<a href="https://www.linkedin.com/in/tristanBony/" target="_blank" title="Visit my LinkedIn" class="card-link">
 							<img src="./assets/images/LI-In-Bug.png" alt="LinkedIn" />
 						</a>
 						<a href="https://www.twitter.com/TristanB0" target="_blank" title="Come see my tweets" class="card-link">
