--- a/langslater.html
+++ b/langslater.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 	<head>
-		<title>Tristan BONY - Software Engineering Student</title>
+		<title>Tristan Bony - Software Engineering Student</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="./style.css" />
@@ -12,18 +12,21 @@
 	<body>
 		<header>
 			<a href="./index.html">
-				<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan BONY" class="logo" />
-				<h1>Tristan BONY</h1>
+				<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan Bony" class="logo" />
+				<h1>Tristan Bony</h1>
 			</a>
 		</header>
 
         <section id="project">
 			<h2>Langslater (Discord bot)</h2>
-            <!---->
+			<hr />
+			<p><a href="https://github.com/TristanB0/Langslater_Discord_bot">Link to the GitHub of the project.</a></p>
+            <p><i>In early development.</i></p>
+			<!---->
         </section>
         
         <footer>
-			<p>&copy; <span id="year"></span> Tristan BONY</p>
+			<p>&copy; <span id="year"></span> Tristan Bony</p>
 		</footer>
 
 		<script src="./script.js"></script>
