--- a/q_learning.html
+++ b/q_learning.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 	<head>
-		<title>Tristan BONY - Software Engineering Student</title>
+		<title>Tristan Bony - Software Engineering Student</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="./style.css" />
@@ -12,8 +12,8 @@
 	<body>
 		<header>
 			<a href="./index.html">
-				<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan BONY" class="logo" />
-				<h1>Tristan BONY</h1>
+				<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan Bony" class="logo" />
+				<h1>Tristan Bony</h1>
 			</a>
 		</header>
 
@@ -49,7 +49,7 @@
         </section>
         
         <footer>
-			<p>&copy; <span id="year"></span> Tristan BONY</p>
+			<p>&copy; <span id="year"></span> Tristan Bony</p>
 		</footer>
 
 		<script src="./script.js"></script>
